tests/invalid/class_without_init_constructor_call/main.py
class NoInit:
    pass


def run_case() -> None:
    NoInit()


if __name__ == "__main__":
    run_case()
